--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -60,6 +60,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=judiciary&">Case view - Overview</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=judiciary&">Case view - Role / access</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>Specifc access - Flow approve</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=judiciary&">Case view - assigned yourself a task</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Case view - Review specific access request</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=judiciary&">Case view - Grant duration of case access
           </a><br>Specifc access - Flow approve</p>
@@ -165,6 +166,7 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=staff&">Case view - Role / access</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Case view - assigned yourself a task</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Case view - Grant duration of case access
             </a><br>Specifc access - Flow approve</p>
