--- a/app/views/caseaccess/pages/PA-00467-2017-trr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr.html
@@ -29,7 +29,7 @@ Case details
     }
   },
   hint: {
-    text: "This Purpose will be sent to the requester. Select one option."
+    text: "This reason will be sent to the requester. Select one option."
   },
   items: [
     {
@@ -38,11 +38,11 @@ Case details
     },
     {
       value: "phone",
-      text: "Purpose B."
+      text: "Reason B."
     },
     {
       value: "email",
-      text: "Purpose C."
+      text: "Reason C."
     },
 
     {
