--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -17,16 +17,28 @@ GOV.UK Prototype Kit
         <!-- JUDICIARY -->
 
         <h2 class="govuk-heading-l">My work</h2>
-        <h2 class="govuk-heading-m"></h2>
-        <h3 class="govuk-heading-s"></h3>
+        <div class="xui-alert-link__number">1 </div>  <div class="govuk-!-padding-bottom-6"></div>
 
-        <p><a target="_blank" href="/workallocation/pages/wa-mytasks?usertype=judiciary&">My tasks - entry</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks?usertype=judiciary&">My tasks - tab</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-o?usertype=judiciary&">My tasks - open - Go to tasks</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018?usertype=judiciary&">Active tasks</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-a?usertype=judiciary&">Active tasks - Assign task to me</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mavailable-tasks?usertype=judiciary&">Available tasks - tab</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mycases?usertype=judiciary&">My cases - tab</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=judiciary&">My access - tab</a><br></p>
 
-        <!-- SECTION BREAK
+<div class="govuk-!-padding-bottom-9"></div>
 
+        <h2 class="govuk-heading-l">My work filter</h2>
+        <div class="xui-alert-link__number">2 </div>  <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-9"></div>
+        <!-- SECTION BREAK -->
+
+        <h2 class="govuk-heading-l">Available tasks</h2>
+        <div class="xui-alert-link__number">3 </div>  <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-9"></div>
+        <!-- SECTION BREAK -->
+<!--
         <h2 class="govuk-heading-m">(USER) Specifc access request</h2>
         <h3 class="govuk-heading-s">Scenario B - Search for and Request Specific Access to case</h3>
         <p><a target="_blank" href="/workallocation/pages/results-s2?usertype=judiciary&">Search - entry</a><br></p>
