--- a/app/views/workallocation/pages/wa-mytasks-o.html
+++ b/app/views/workallocation/pages/wa-mytasks-o.html
@@ -26,22 +26,22 @@ My work
         <nav class="hmcts-sub-navigation">
           <ul class="hmcts-sub-navigation__list">
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page" href="mywork">
+              <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-mytasks">
                 My tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="available-tasks">
+              <a class="hmcts-sub-navigation__link" href="wa-available-tasks">
                 Available tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="mycases">
+              <a class="hmcts-sub-navigation__link" href="wa-mycases">
                 My cases
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="#">
+              <a class="hmcts-sub-navigation__link" href="wa-myaccess">
                 My access
               </a>
             </li>
