--- a/app/views/workallocation/pages/wa-PA-00321-2018-a.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018-a.html
@@ -1,21 +1,20 @@
 {% if  data.usertype == 'judiciary'   %}
-    {% extends "../layoutjudicial.html" %}
+{% extends "../layoutjudicial.html" %}
 {% else %}
-    {% extends "../layoutstaff.html" %}
+{% extends "../layoutstaff.html" %}
 {% endif %}
 {% block pageTitle %}
 Case details
 {% endblock %}
 {% block content %}
 <div class="hmcts-banner hmcts-banner--success">
-
-<svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
-<path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" /></svg>
-
-<div class="hmcts-banner__message">
-<span class="hmcts-banner__assistive">Success</span>
-You've assigned yourself a task. It's available in My tasks.
-</div>
+  <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
+    <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" />
+  </svg>
+  <div class="hmcts-banner__message">
+    <span class="hmcts-banner__assistive">Success</span>
+    You've assigned yourself a task. It's available in My tasks.
+  </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
@@ -44,7 +43,7 @@ You've assigned yourself a task. It's available in My tasks.
       Contents
     </h2>
     <ul class="govuk-tabs__list">
-      <li class="govuk-tabs__list-item" >
+      <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="wa-PA-00321-2018">
           Tasks
         </a>
@@ -80,7 +79,7 @@ You've assigned yourself a task. It's available in My tasks.
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#" >
+        <a class="govuk-tabs__tab" href="#">
           Applications
         </a>
       </li>
@@ -89,72 +88,72 @@ You've assigned yourself a task. It's available in My tasks.
           Case notes
         </a>
       </li>
-  <!--    <li class="govuk-tabs__list-item">
+      <!--    <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="#past-week">
           Hearing
         </a>
       </li> -->
     </ul>
     <div class="govuk-tabs__panel" id="event" style="display: padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
-      <div >
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m  govuk-!-margin-bottom-2">Task alert</h2>
-          <div class="govuk-warning-text">
-  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-  <strong class="govuk-warning-text__text">
-    <span class="govuk-warning-text__assistive">Warning</span>
-    There is an application task which might impact other active tasks.
-  </strong>
-</div>
+      <div>
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds">
+            <h2 class="govuk-heading-m  govuk-!-margin-bottom-2">Task alert</h2>
+            <div class="govuk-warning-text">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+              <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                There is an application task which might impact other active tasks.
+              </strong>
+            </div>
 
-          <h2 class="govuk-heading-m  govuk-!-margin-bottom-2">Active tasks</h2>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <h2 class="govuk-heading-m  govuk-!-margin-bottom-2">Active tasks</h2>
+            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-          <table class="govuk-table">
-            <caption class="govuk-table__caption govuk-table__caption--m">Generate decision and reasons <span class="hmcts-badge_right">{{govukTag({
+            <table class="govuk-table">
+              <caption class="govuk-table__caption govuk-table__caption--m">Generate decision and reasons <span class="hmcts-badge_right">{{govukTag({
 text: "dd/mm/yyyy",
 classes: "govuk-tag--grey"
 })}}</span></caption>
-            <tbody class="govuk-table__body">
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Assigned to</th>
-                <td class="govuk-table__cell">Judge Beech</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Manage </th>
-                <td class="govuk-table__cell"><a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a> </td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header">Next steps</th>
-                <td class="govuk-table__cell"><a href="#">Generate decision and reasons</a></td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="govuk-!-padding-bottom-6"></div>
-          <table class="govuk-table">
-            <caption class="govuk-table__caption govuk-table__caption--m">Review application decision <span class="hmcts-badge_right">{{govukTag({
+              <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header" style="width: 220px;">Assigned to</th>
+                  <td class="govuk-table__cell">Judge Beech</td>
+                </tr>
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header" style="width: 220px;">Manage </th>
+                  <td class="govuk-table__cell"><a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a> </td>
+                </tr>
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Next steps</th>
+                  <td class="govuk-table__cell"><a href="#">Generate decision and reasons</a></td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="govuk-!-padding-bottom-6"></div>
+            <table class="govuk-table">
+              <caption class="govuk-table__caption govuk-table__caption--m">Review application decision <span class="hmcts-badge_right">{{govukTag({
 text: "dd/mm/yyyy",
 classes: "govuk-tag--grey"
 })}}</span></caption>
-<tbody class="govuk-table__body">
-  <tr class="govuk-table__row">
-    <th scope="row" class="govuk-table__header" style="width: 220px;">Assigned to</th>
-    <td class="govuk-table__cell">Judge Beech</td>
-  </tr>
-  <tr class="govuk-table__row">
-    <th scope="row" class="govuk-table__header" style="width: 220px;">Manage </th>
-    <td class="govuk-table__cell"><a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a> </td>
-  </tr>
-  <tr class="govuk-table__row">
-    <th scope="row" class="govuk-table__header">Next steps</th>
-    <td class="govuk-table__cell"><a href="#">Review application decision</a></td>
-  </tr>
-</tbody>
-          </table>
-        </div>
-        <div class="govuk-grid-column-one-third">
-<!--
+              <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header" style="width: 220px;">Assigned to</th>
+                  <td class="govuk-table__cell">Judge Beech</td>
+                </tr>
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header" style="width: 220px;">Manage </th>
+                  <td class="govuk-table__cell"><a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a> </td>
+                </tr>
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Next steps</th>
+                  <td class="govuk-table__cell"><a href="#">Review application decision</a></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="govuk-grid-column-one-third">
+            <!--
           <h2 class="govuk-heading-m  govuk-!-margin-bottom-4">Task history</h2>
             <div class="hmcts-timeline">
                 <div class="hmcts-timeline__item">
@@ -181,7 +180,7 @@ classes: "govuk-tag--grey"
             </div>
             <p><a href="#">View full timeline</a></p>
 -->
+          </div>
         </div>
       </div>
-</div>
-{% endblock %}
+      {% endblock %}
