--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -12,21 +12,16 @@ GOV.UK Prototype Kit
       Last updated (18/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
     </h2>
     <div style="display: flex; margin-top: 80px;">
-      <div style="width: 800px;">
-
-        <!-- JUDICIARY -->
-
-        <h2 class="govuk-heading-l">My work</h2>
+      <div style="width: 800px;">        <!-- JUDICIARY -->        <h2 class="govuk-heading-l">My work</h2>
         <div class="xui-alert-link__number">1 </div>  <div class="govuk-!-padding-bottom-6"></div>
 
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks?usertype=judiciary&">My tasks - tab</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-o?usertype=judiciary&">My tasks - open - Go to tasks</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018?usertype=judiciary&">Active tasks</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-a?usertype=judiciary&">Active tasks - Assign task to me</a><br></p>
-        <p><a target="_blank" href="/workallocation/pages/wa-mavailable-tasks?usertype=judiciary&">Available tasks - tab</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-mycases?usertype=judiciary&">My cases - tab</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=judiciary&">My access - tab</a><br></p>
-
 <div class="govuk-!-padding-bottom-9"></div>
 
         <h2 class="govuk-heading-l">My work filter</h2>
