--- a/app/views/workallocation/pages/wa-myaccess.html
+++ b/app/views/workallocation/pages/wa-myaccess.html
@@ -1,5 +1,5 @@
 {% if  data.usertype == 'judiciary'   %}
-{% extends "../layoutjudicial-c.html" %}
+{% extends "../layoutjudicial.html" %}
 {% else %}
 {% extends "../layoutstaff.html" %}
 {% endif %}
