--- a/app/views/workallocation/pages/wa-myaccess.html
+++ b/app/views/workallocation/pages/wa-myaccess.html
@@ -56,7 +56,7 @@ My work
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
           <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 110px;" aria-sort="none"><a href="#">(Reset sorting)</a></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 110px;" aria-sort="none"></th>
         </tr>
       </thead>
       <tbody class="govuk-table__body">
