--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -178,6 +178,10 @@ a.hmcts-search-toggle__button {
   float: right;
 }
 
+.hmcts-right {
+  float: right;
+}
+
 .hmcts-badge--orange {
   border-color: govuk-colour("orange");
   color: govuk-colour("orange");
