--- a/app/views/caseaccess/pages/PA-00467-2017-tc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tc.html
@@ -1,7 +1,7 @@
 {% if  data.usertype == 'judiciary'   %}
-    {% extends "../layoutjudicial.html" %}
+{% extends "../layoutjudicial.html" %}
 {% else %}
-    {% extends "../layoutstaff.html" %}
+{% extends "../layoutstaff.html" %}
 {% endif %}
 {% block pageTitle %}
 Case details
@@ -80,7 +80,7 @@ Case details
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week" >
+        <a class="govuk-tabs__tab" href="#past-week">
           Applications
         </a>
       </li>
@@ -89,68 +89,51 @@ Case details
           Case notes
         </a>
       </li>
-  <!--    <li class="govuk-tabs__list-item">
+      <!--    <li class="govuk-tabs__list-item">
         <a class="govuk-tabs__tab" href="#past-week">
           Hearing
         </a>
       </li> -->
     </ul>
     <div class="govuk-tabs__panel" id="event" style="display: padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
-      <div >
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-heading-m  govuk-!-margin-bottom-2">Active tasks</h2>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <table class="govuk-table">
-            <caption class="govuk-table__caption govuk-table__caption--m">Review application decision <span class="hmcts-badge_right">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}}</span></caption>
-            <tbody class="govuk-table__body">
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Assigned to</th>
-                <td class="govuk-table__cell">Judge Beech</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header">Manage</th>
-                <td class="govuk-table__cell"><a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a> <a href="">Refer a task</a> </td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header">Next steps</th>
-                <td class="govuk-table__cell"><a href="#">Review application decision</a></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="govuk-grid-column-one-third">
-          <!--
-          <h2 class="govuk-heading-m  govuk-!-margin-bottom-4">Task history</h2>
-            <div class="hmcts-timeline">
-                <div class="hmcts-timeline__item">
-                  <div class="hmcts-timeline__header">
-                    <h3 class="hmcts-timeline__title"><a href="#">Case reasssigned to you</a></h3>
-                      <p class="hmcts-timeline__by">by Jane Doe, court administrator</p>
-                  </div>
-                  <p class="hmcts-timeline__date"><time datetime="2018-09-14T09:38:00.000Z">Fri 14 Sep 2018 at 9:38am</time></p>
-                </div>
-                <div class="hmcts-timeline__item">
-                  <div class="hmcts-timeline__header">
-                    <h3 class="hmcts-timeline__title"><a href="#">Approved consent order uploaded</a></h3>
-                      <p class="hmcts-timeline__by">by Simon Saint, court administrator</p>
-                  </div>
-                  <p class="hmcts-timeline__date"><time datetime="2018-09-12T09:38:00.000Z">Wed 12 Sep 2018 at 9:38am</time></p>
-                </div>
-                <div class="hmcts-timeline__item">
-                  <div class="hmcts-timeline__header">
-                    <h3 class="hmcts-timeline__title"><a href="#">Consent order approved</a></h3>
-                      <p class="hmcts-timeline__by">by DJ Nightingale</p>
-                  </div>
-                  <p class="hmcts-timeline__date"><time datetime="2018-09-11T16:15:00.000Z">Tue 11 Sep 2018 at 4:15pm</time></p>
-                </div>
-            </div>
-            <p><a href="#">View full timeline</a></p>
-            -->
+      <div>
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds">
+            <h2 class="govuk-heading-m">Active tasks</h2>
+            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <p class="govuk-body"><strong>Review application decision</strong> <span class="hmcts-badge_right">{{govukTag({
+      text: "dd/mm/yyyy",
+      classes: "govuk-tag--grey"
+      })}}</span></p>
+            <dl class="govuk-summary-list govuk-summary-list--no-border">
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Assigned to
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  Judge Beech
+                </dd>
+              </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Manage
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
+                </dd>
+              </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Next steps
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  <a href="#">Review application decision</a>
+                </dd>
+              </div>
+            </dl>
+          </div>
+          <div class="govuk-grid-column-one-third">
+          </div>
         </div>
       </div>
-</div>
-{% endblock %}
+      {% endblock %}
