--- a/app/views/workallocation/pages/wa-PA-00321-2018-a.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018-a.html
@@ -13,7 +13,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">Success</span>
-    You've assigned yourself a task. It's available in My tasks.
+    You've assigned yourself a task.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -103,7 +103,7 @@ Case details
               <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
               <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                There is an application task which might impact other active tasks.
+                An application is pending a decision. Consider if this application has an impact on any other tasks you might wish to complete.
               </strong>
             </div>
             <h2 class="govuk-heading-m">Active tasks</h2>
