--- a/app/views/caseaccess/pages/PA-00467-2017-ta.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ta.html
@@ -12,7 +12,7 @@ Case details
 <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" /></svg>
 <div class="hmcts-banner__message">
 <span class="hmcts-banner__assistive">Success</span>
-You've assigned yourself a task. It's available in My tasks.
+You've assigned yourself a task.
 </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
