--- a/app/views/caseaccess/pages/PA-00467-2017-tr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr.html
@@ -15,7 +15,7 @@ Case details
 
 <div class="hmcts-banner__message">
 <span class="hmcts-banner__assistive">Success</span>
-You've assigned yourself a task. It's available in My tasks.
+You've assigned yourself a task.
 </div>
 </div>
 <!-- <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
